changing images in order and stoping at a random image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         </form>
     </div>
-    <script src ='fruit.js'></script>
+    <script src ='fruitapp.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         
 
