Adding the spining effect

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
             <p id = 'status' >Status...</p>
         </div>
             <div class= 'row imgRow' >
+            
             <div id = 'slot1' class='column'>
-                <img>
+                <img class='moveSlot'>
             </div>
+           
             <div id = 'slot2' class='column'>
                 <img> 
             </div>
