Adding Sound and a scoreBoard

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </div>
            
             <div id = 'slot2' class='column'>
-                <img> 
+                <img class='moveSlot'> 
             </div>
 
             <div id = 'slot3' class='column'>
-                <img>
+                <img class='moveSlot'>
             </div>
         </div>
         <div class= 'row'>
