updating my ReadMe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet" type= "text/css">
     
     <body>
+      <h1> My Fruit Machine</h1>
       <div id = 'box'>
         <div class= row>
             <p id = 'status' >Status...</p>
